@@ -1,3 +1,7 @@
+2015-02-26  Antoine Tremblay  <antoine.tremblay@ericsson.com>
+
+	* gdb.base/structs.exp: Check for correct struct on finish.
+
 2015-02-26  Yao Qi  <yao.qi@linaro.org>
 
 	* lib/dwarf.exp (function_range): Adjust pattern when $func_length
