@@ -1,3 +1,7 @@
+2015-02-26  Antoine Tremblay  <antoine.tremblay@ericsson.com>
+
+	* gdb/infcmd.c (print_return_value): use type_to_string to print type.
+
 2015-02-26  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* elfread.c (elf_read_minimal_symbols): Use bfd_alloc for
